# recipe-transcriber

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  app.py  celery_app.py  docker-compose.yml  docker-deploy.sh  pyproject.toml  run_dev.sh  setup.cfg  setup_database.sh  tailwind.config.js
.github/: copilot-instructions.md
migrations/versions/: 02cbe1711a34_initial_migration.py  0f6280dfce9a_initial_migration.py  20241224_add_last_status_to_transcription_job.py  264edf2066a0_add_index_to_recipe_external_recipe_id.py  49a8d842be50_initial_migration_with_fixed_foreign_.py  895767e8ad21_add_session_id_to_transcription_jobs.py
src/receipe_transcriber/: __init__.py  celery_app.py  config.py  models.py
src/receipe_transcriber/routes/: main.py  webhooks.py
src/receipe_transcriber/services/: ollama_service.py
src/receipe_transcriber/static/css/: input.css
src/receipe_transcriber/static/js/: camera.js  recipe_edit.js
src/receipe_transcriber/tasks/: transcription_tasks.py
src/receipe_transcriber/templates/: base.html  index.html  recipe_detail.html  recipes_gallery.html
src/receipe_transcriber/templates/components/: icons.html  invalid_file_type.html  job_error.html  job_processing.html  job_status.html  no_valid_files.html  recent_recipes.html  recipe_card.html  recipe_edit_form.html
tests/: test_models.py  test_routes.py  test_services.py  test_tasks.py
